[cucumber] apply quick-fixes from inspection "SequencedCollection method can be used"
GitOrigin-RevId: c7b327ca04f864cf7942d6dce05b59cfd286f2b9